<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >


	<TextView android:id="@+id/profNameLabel" android:layout_width="fill_parent"
		android:layout_marginTop="5dip" android:layout_marginBottom="5dip"
		android:layout_marginLeft="25dip" android:layout_height="wrap_content"
		android:text="@string/prof_name" />
	<EditText android:id="@+id/profNameText" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:maxEms="16"
		android:minEms="4" android:singleLine="true"
		android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
		android:layout_below="@id/profNameLabel" android:maxLength="16"
		android:minWidth="250dip" />
	<TextView android:id="@+id/codeLabel" android:layout_width="wrap_content"
		android:layout_marginTop="5dip" android:layout_marginBottom="5dip"
		android:layout_marginLeft="25dip" android:layout_height="wrap_content"
		android:text="@string/code_name" android:layout_below="@id/profNameText" />
	<EditText android:id="@+id/codeText" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:maxEms="16"
		android:minEms="4" android:singleLine="true"
		android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
		android:layout_below="@id/codeLabel" android:maxLength="20"
		android:minWidth="250dip" />
	<Button android:id="@+id/generateButton"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/get_code" android:layout_marginTop="10dip"
		android:layout_marginBottom="5dip" android:layout_marginLeft="10dip"
		android:layout_below="@id/codeText" android:drawableTop="@drawable/ic_menu_add" />



</LinearLayout>
